--- a/IMT_Kmedias.ipynb
+++ b/IMT_Kmedias.ipynb
@@ -96,17 +96,7 @@
         "id": "1srfzIVBqv7y"
       },
       "source": [
-        "# imports\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline\n",
-        "import seaborn as sns\n",
-        "warnings.filterwarnings(\"ignore\")\n",
-        "\n",
-        "# acrescente seus imports aqui\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.cluster import KMeans"
+        "# Seu código"
       ],
       "execution_count": null,
       "outputs": []
@@ -440,6 +430,219 @@
           "execution_count": 18
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hFxyggo552J7"
+      },
+      "source": [
+        "## Exercício. Definindo a entrada `X`\n",
+        "\n",
+        "1. As entradas `X` do `kmeans` precisam ser numéricas pois ele emprega a média das distâncias dos elementos. Converta o atributo `Gender` numérico, com 'Male' = 1 e 'Female' = 0.\n",
+        "\n",
+        "2. Além disso note que existe um atributo nos dados que não faz sentido ser incluído no modelo. Exclua esse atributo da entrada `X` para o treinamento."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cKqbsZ1vn5Bo"
+      },
+      "source": [
+        "# Seu código"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rJmxJpb1t_1H"
+      },
+      "source": [
+        "## Exercício. Normalize os dados `Scaling`\n",
+        "\n",
+        "O `kmeans` emprega distâncias e, portanto, é sensível à escala dos dados. Normalize os dados de `X` com o método `StandardScaler()` ou a função `scale( )` (solução mais simples)\\*.\n",
+        "\n",
+        "\\* nota: o método precisa ser empregado sempre que quisermos 'persistir' ou empregar novamente a normalização aplicada para novos dados preservando essa transformação. Neste caso específico, não teremos necessidade de preservar essa transformação e podemos então apenas aplicar a função `scale()` que se mostra bastante mais simples."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oFfQBGJyeeEF"
+      },
+      "source": [
+        "# Seu código"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0DIg50rgkH8S"
+      },
+      "source": [
+        "Ótimo, seus dados agora devem aparecer todos com média 0 e desvio padrão 1."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PA0a-38QudWG"
+      },
+      "source": [
+        "## Exercício. Determine o número *ideal* de Clusters\n",
+        "\n",
+        "O método da inércia ou regra do cotovelo, permite determinar o melhor número de cluster. Determine o número de cluster executando o código apresentado na teoria. Ele não precisa ser modificado se os dados de entradas estão corretamente em `X`.\n",
+        "\n",
+        "\\*nota: existem outras métricas e critérios para decidir o número de Clusters. Algumas dependem do problema em questão (veja o problema de separar os grupos por idade para dois monitores em uma visita). Você ainda pode verificar o tamanho dos grupos evitando grupos muito grandes ou muito pequenos. E ainda existem métricas estatísticas como o `Silhouette`. Para os nossos propósitos, entretanto, será suficiente empregarmos a regra do cotovelo com base na inércia dos grupos."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g5ZlWkKMuGug"
+      },
+      "source": [
+        "# Seu código"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VfmU_cDZk-Kj"
+      },
+      "source": [
+        "## Exercício. Segmentando os Grupos\n",
+        "\n",
+        "Determinado o número (na dúvida o melhor número é o 3) vamos segmentar nossos clientes em 3 grupos. Não deixe de empregar o `random_state= 123` na função `KMeans` para obter as mesmas respostas."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZKYFfbP-vJvO"
+      },
+      "source": [
+        "# Seu código"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5zSRJswck9Th"
+      },
+      "source": [
+        "## Exercício. Identifique o grupo de alguns clientes\n",
+        "\n",
+        "Adicione um atributo `cluster` ao dataframe atribuindo os grupos `labels` obtidos acima para facilitar a identificação do grupo de cada cliente."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n48vhIBVmI4j"
+      },
+      "source": [
+        "# Seu código"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s9JWcNahmRwy"
+      },
+      "source": [
+        "A que grupos pertencem os clientes de ID 12, 34, 99?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BKaHa4jLmSiw"
+      },
+      "source": [
+        "# Seu código"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YnAQY3-gv1cS"
+      },
+      "source": [
+        "## Exercício. Caracterizando os grupos\n",
+        "\n",
+        "Mas afinal, o que são esses grupos de clientes 0, 1, 2? O que pode estar diferenciando cada grupo?\n",
+        "\n",
+        "Uma abordagem é olhar as médias dos valores desses grupos e observar no que um cliente médio de cada grupo se diferencia dos demais.\n",
+        "\n",
+        "Empregue o modelo da teoria para exibir as médias dos valores de cada grupo e tente identificar que grupos de clientes estão sendo formados."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UOomfmEDiptt"
+      },
+      "source": [
+        "# Seu código"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1UYMbBPh629m"
+      },
+      "source": [
+        "## Exercícios. Utilizando os grupos\n",
+        "\n",
+        "* Cenário **A**. A loja, em uma campanha de marketing, quer então presentear aluguns clientes com algo score com produtos para cabelos brancos. Para qual grupo/grupos ela deveria enviar os produtos?\n",
+        "\n",
+        "* Cenário **B**. Ela ainda quer fazer uma oferta de produtos de celulares modernos e de luxo. Para qual grupo/grupos ela deveria ofertar esses produtos para maximizar sua chance de vendas?\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hhKJOGcGonVg"
+      },
+      "source": [
+        "Resposta: grupo 1, Idade média alto score; grupo 0, Jovens alta renda."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cR7bx2VJrwEN"
+      },
+      "source": [
+        "# Todas respostas..."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mi5HIjdYo0PC"
+      },
+      "source": [
+        "# Seu código"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
