--- a/IMT_HClust.ipynb
+++ b/IMT_HClust.ipynb
@@ -21,6 +21,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -461,6 +462,21 @@
         "\n",
         "Vamos empregar aqui apenas a técnica de média de silhueta."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A medida de Silhueta combina os conceitos de coesão de cluster (preferencialmente modelos que contêm clusters altamente coesos) e de separação de cluster (preferencialmente modelos que contêm clusters altamente separados). O coeficiente de Silhueta médio é simplesmente a média de todos os casos do cálculo a seguir para cada caso individual:\n",
+        "\n",
+        "(B - A) / máx (A, B)\n",
+        "\n",
+        "em que A é a distância do caso até o centroide do cluster ao qual o caso pertence e B é a distância mínima do caso até o centroide de cada um dos demais clusters.\n",
+        "\n",
+        "O coeficiente de Silhueta (e sua média) varia entre -1 (indica um modelo muito pobre) e 1 (indicando um modelo excelente). A média pode ser realizada no nível do total de casos (que produz a Silhueta total) ou no nível de clusters (que produz Silhueta de cluster). As distâncias podem ser calculadas utilizando distâncias euclidianas ou outras distâncias."
+      ],
+      "metadata": {
+        "id": "nyQ5vCDSY-qL"
+      }
     },
     {
       "cell_type": "code",
