--- a/IMT_AccClust_DBSCAN.ipynb
+++ b/IMT_AccClust_DBSCAN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlK9YIOWssQHYIJLLYH8z7",
+      "authorship_tag": "ABX9TyNiCkHMt3RSX8+HevJ98tPj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1135,7 +1135,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "id": "9YSe2WxKeU8o",
         "outputId": "1a5d9252-4c99-4c87-d307-db6cbe35e36d"
       },
@@ -1182,6 +1181,7 @@
         "#@markdown Tente agora com o `iris_IMT`\n",
         "iris_IMT = sns.load_dataset('iris')\n",
         "iris_IMT.head()\n",
+        "np.random.seed(1)\n",
         "\n",
         "from sklearn import datasets\n",
         "noisy_circles = datasets.make_circles(n_samples=50, factor=0.99, noise=0.03, random_state=1)\n",
@@ -1197,7 +1197,6 @@
         "iris_IMT['petal_width'] = np.random.normal(0, 2, 150)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "s5x8SVplRaqc"
       },
       "execution_count": null,
