--- a/IMT_TFIDF_word2vec.ipynb
+++ b/IMT_TFIDF_word2vec.ipynb
@@ -43,9 +43,7 @@
         "id": "-G7aCMh4r9y1"
       },
       "source": [
-        "<h1 align=left><font size = 6, style=\"color:rgb(200,0,0)\">\n",
-        "<b> Bag of Words, TF-IDF & Word Embedding</b></font></h1>\n",
-        "<hr>\n",
+        "# **Bag of Words, TF-IDF & Word Embedding**\n",
         "\n",
         "\n",
         "\n",
@@ -54,6 +52,15 @@
         "Descubra ao final o quanto um texto seu se aproxima da obra do escritor Machado de\n",
         "Assis."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Vamos começar por [aqui](https://github.com/Rogerio-mack/IMT_Ciencia_de_Dados/blob/main/others/IMT_TFIDF_word2vec.pdf)**"
+      ],
+      "metadata": {
+        "id": "ZQSg_lI-HFve"
+      }
     },
     {
       "cell_type": "markdown",
@@ -117,7 +124,7 @@
         "import gensim\n",
         "print (\"nltk, gesim initialization ok\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +169,7 @@
         "print(df.iloc[0])\n",
         "print(df.shape)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +203,7 @@
       "source": [
         "df = df.sample(1000) # Para reduzir a quantidade de dados para a apresentação"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +252,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +294,7 @@
         "dictionary = gensim.corpora.Dictionary(doc_words)\n",
         "print(dictionary.token2id)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +317,7 @@
       "source": [
         "print(len(dictionary.token2id))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,7 +353,7 @@
         "  print('doc_words[', i , ']',doc_words[i][0:10])\n",
         "  print(dictionary.doc2bow(doc_words[i]))\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +404,7 @@
         "plt.axis(\"off\")\n",
         "plt.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -445,7 +452,7 @@
         "from nltk.corpus import stopwords\n",
         "print(stopwords.words(\"portuguese\"))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +495,7 @@
         "for i in range(10):\n",
         "  print('doc_words[', i , ']',doc_words[i][0:10])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +544,7 @@
         "\n",
         "print(trash)\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +581,7 @@
         "for i in range(10):\n",
         "  print('doc_words[', i , ']',doc_words[i][0:10])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +622,7 @@
         "plt.axis(\"off\")\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -659,7 +666,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +716,7 @@
         "\n",
         "doc_words = doc_words_before # voltando sem stemming"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -751,7 +758,7 @@
         "dictionary = gensim.corpora.Dictionary(doc_words)\n",
         "print(dictionary.token2id)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -774,7 +781,7 @@
       "source": [
         "print(len(dictionary.token2id))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -816,7 +823,7 @@
         "  print('doc_words[', i , ']',bow[i])\n",
         "  print('\\n')\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,7 +872,7 @@
       "source": [
         "corpus = [dictionary.doc2bow(doc) for doc in doc_words]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -880,7 +887,7 @@
       "source": [
         "len(corpus) == len(doc_words)\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -919,7 +926,7 @@
         "# for doc in tf_idf[corpus]:\n",
         "#   print([[dictionary[id], np.around(freq, decimals=2)] for id, freq in doc])"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -959,7 +966,7 @@
         "  print('doc_words[', i , ']',tfidf[i])\n",
         "  print('\\n')\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1013,7 +1020,7 @@
         "import gensim\n",
         "from gensim.models import Word2Vec"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1025,7 +1032,7 @@
         "model_CBOW = Word2Vec(doc_words, min_count=1, workers=3, vector_size= 50, window =5, sg = 0) # sg = 0 means CBOW\n",
         "model_SGRAM = Word2Vec(doc_words, min_count=1, workers=3, vector_size= 50,window =5, sg = 1)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1040,7 +1047,7 @@
       "source": [
         "model_CBOW.wv.index_to_key"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2066,7 +2073,7 @@
       "source": [
         "len(model_CBOW.wv.index_to_key)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2092,7 +2099,7 @@
         "id": "FbU4QF4AsVCH",
         "outputId": "341c70e2-7611-4d51-85b8-9a11e5e5ef81"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2130,7 +2137,7 @@
         "id": "GIAygwbItCuk",
         "outputId": "f8b94860-9a2c-4d18-db5e-689272528810"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2181,7 +2188,7 @@
         "print(len(doc_embed))\n",
         "print(len(doc_embed[0]))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2216,7 +2223,7 @@
         "  print('doc_words[', i , ']',doc_words[i][0:10])\n",
         "  print('doc_embed[', i , ']',doc_embed[i])"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2335,7 +2342,7 @@
         "from sklearn.metrics import classification_report\n",
         "print(classification_report(y_test,y_pred))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2435,7 +2442,7 @@
         "import nltk\n",
         "nltk.download('machado')\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2478,7 +2485,7 @@
       "source": [
         "!unzip /root/nltk_data/corpora/machado.zip -d /root/nltk_data/corpora/"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2752,7 +2759,7 @@
       "source": [
         "print(nltk.corpus.machado.fileids())"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2779,7 +2786,7 @@
         "print(machado.fileids()[0:10])\n",
         "print('Número de obras de NLTK Machado: ', len(machado.fileids()))\n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2803,7 +2810,7 @@
       "source": [
         "machado.words('romance/marm08.txt')"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2830,7 +2837,7 @@
       "source": [
         "machado.raw('romance/marm08.txt')[1000:1200].replace('\\n',' ')\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2869,7 +2876,7 @@
         "\n",
         "model_SGRAM = Word2Vec(doc_words, min_count=1,vector_size= 50, workers=3, window =8, sg = 1)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2884,7 +2891,7 @@
       "source": [
         "model_SGRAM.wv.index_to_key"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3910,7 +3917,7 @@
       "source": [
         "len(model_SGRAM.wv.index_to_key)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3936,7 +3943,7 @@
         "id": "_kvZqP4owIMd",
         "outputId": "1e4f2b2b-fd42-4820-8691-a72647ae8cf9"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3978,7 +3985,7 @@
         "print(emb.shape)\n",
         "print(emb)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4010,7 +4017,7 @@
       "source": [
         "model_SGRAM.wv.most_similar('amor', topn=10)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4072,7 +4079,7 @@
         "print(string.punctuation)\n",
         "trash = [e for e in string.punctuation]"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4098,7 +4105,7 @@
         "# Machado de Assis\n",
         "docs[0]"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4129,7 +4136,7 @@
         "# Machado de Assis\n",
         "docs[1]"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4160,7 +4167,7 @@
         "# Clarisse Lispector\n",
         "docs[2]"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4191,7 +4198,7 @@
         "# Brasil, Wikipedia\n",
         "docs[3]"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4237,7 +4244,7 @@
         "for i in range(len(docs)):\n",
         "  print('doc_words[', i , ']',doc_words[i][0:10])"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4287,7 +4294,7 @@
         "\n",
         "doc_SGRAM = embed(doc_words, model_SGRAM)\n"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4324,7 +4331,7 @@
         "plt.title('SGRAM Comparando Machado')\n",
         "plt.show()\n"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
