--- a/IMT_TFIDF_word2vec.ipynb
+++ b/IMT_TFIDF_word2vec.ipynb
@@ -56,6 +56,14 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Doc 1: \"A lua é um satélite natural da Terra.\"\n",
+        "\n",
+        "Doc 2: \"A Terra possui apenas um satélite natural, que é a lua.\"\n",
+        "\n",
+        "Doc 3: \"Maçãs são uma excelente fonte de vitamina C.\"\n",
+        "\n",
+        "**Como construir um sistema que identifica os documentos mais semelhantes e *dessemelhantes*?**\n",
+        "\n",
         "**Vamos começar por [aqui](https://github.com/Rogerio-mack/IMT_Ciencia_de_Dados/blob/main/others/IMT_TFIDF_word2vec.pdf)**"
       ],
       "metadata": {
