--- a/IMT_Sentiment_Analysis_TFIDF.ipynb
+++ b/IMT_Sentiment_Analysis_TFIDF.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -466,7 +467,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "id": "WBCcltxfALfE",
         "outputId": "c1156e49-1799-48fd-b98d-91cd83e1d7ab"
       },
@@ -526,13 +526,12 @@
       "cell_type": "code",
       "source": [
         "#@markdown Check if True\n",
-        "X_tfidf.toarray()[ X_tfidf.toarray() != 0 ].sum() == 32607.820314182558"
+        "X_tfidf.toarray()[ X_tfidf.toarray() != 0 ].sum() == 32688.35610195654"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "id": "8KaFm8OrCflf",
         "outputId": "ac96559b-a36c-4427-84ee-7ba8837d26b3"
       },
