--- a/IMT_Sentiment_Analysis_TFIDF.ipynb
+++ b/IMT_Sentiment_Analysis_TFIDF.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -467,6 +466,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "cellView": "form",
         "id": "WBCcltxfALfE",
         "outputId": "c1156e49-1799-48fd-b98d-91cd83e1d7ab"
       },
