--- a/Warmup_TS.ipynb
+++ b/Warmup_TS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwKH2i7TJAn/lrSHwHgcK8",
+      "authorship_tag": "ABX9TyM+PtiNR/NrvWs9LK5w9t7t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "80CF3Eq9EXDW"
+      },
+      "source": [
+        "<head>\n",
+        "  <meta name=\"author\" content=\"Rogério de Oliveira\">\n",
+        "  <meta institution=\"author\" content=\"ITM\">\n",
+        "</head>\n",
+        "\n",
+        "<img src=\"https://maua.br/images/selo-60-anos-maua.svg\" width=300, align=\"right\">\n",
+        "<!-- <h1 align=left><font size = 6, style=\"color:rgb(200,0,0)\"> optional title </font></h1> -->\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -39,12 +54,27 @@
       "metadata": {
         "id": "uRQHGYn8QjZF"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Warm Up\n",
+        "\n",
+        "Para a série de dados abaixo:\n",
+        "\n",
+        "1. Construa um **modelo de regressão linear** e ao menos um **não linear**.\n",
+        "2. Faça um ***forecast*** dos próximos 60 dias\n",
+        "3. Em seguida, aprenderemos como ajustar os dados para obter predições a partir dos valores anteriores da própria série (componentes autoregressivas) aplicando os regressores"
+      ],
+      "metadata": {
+        "id": "n4GoPmhNWAdw"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
