--- a/IMT_PF1.ipynb
+++ b/IMT_PF1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx0bv4zm06aFZbkXTxWINR",
+      "authorship_tag": "ABX9TyMYYQTbmLwXKofstg4HuS1Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -969,7 +969,7 @@
         "\n",
         "Q5. Qual dos 3 modos de clusterização apresenta Taxa Correta de Classificação maior e qual é esse valor?\n",
         "\n",
-        "Q6. No melhor modelo (questão anterior) qual a classe de bebida que apresenta melhor resultado de Taxa Correta de Classificação e os valores da respectiva 'precisão' e 'recall' dessa classe?"
+        "Q6. No melhor modelo (questão anterior) os valores da respectiva 'precisão' da classe 0 e 'recall' da classe 1?"
       ],
       "metadata": {
         "id": "C3ECDfs2DAdM"
