--- a/Introducao_ao_Colab.ipynb
+++ b/Introducao_ao_Colab.ipynb
@@ -47,7 +47,7 @@
         "  <meta institution=\"author\" content=\"ITM\">\n",
         "</head>\n",
         "\n",
-        "<img src=\"https://maua.br/images/selo-60-anos-maua.svg\" width=300, align=\"right\">\n",
+        "<img src=\"https://github.com/Rogerio-mack/IMT_CD_2024/blob/main/maua_logo.png?raw=true\" width=300, align=\"right\">\n",
         "<!-- <h1 align=left><font size = 6, style=\"color:rgb(200,0,0)\"> optional title </font></h1> -->\n"
       ]
     },
@@ -57,15 +57,15 @@
         "id": "zQX8WQPeHTwc"
       },
       "source": [
-        "# **Introdução ao Colab**\n",
+        "# **O Paradigma do Aprendizado de Máquina**\n",
         "---\n",
         "\n",
-        "Vamos aquecer? \n",
+        "Vamos aquecer?\n",
         "\n",
         "\n",
-        "**Exercício 1**. Acesse ou construa um conjunto de dados numéricos, pares $(X, y)$ como os dados de temperatura C e F. Você pode por exemplo criar um `Numpy` array de valores e aplicar uma função, associar valores manualmente ou ler uma tabela (excel ou .csv). Em seguida empregue o exemplo do material anterior para fazer uma predição das saídas $y$ com base em um modelo de aprendizado linear.\n",
+        "**Exercício 1**. Acesse ou construa um conjunto de dados numéricos, pares $(X, y)$ como os dados de temperatura C e F. Escolha, por exemplo, uma função linear $y = aX + b$. Você pode por exemplo criar um `Numpy` array de valores e aplicar essa função, associar valores manualmente ou ler uma tabela (excel ou .csv). Em seguida empregue o exemplo do material anterior para fazer uma predição das saídas $y$ com base em um modelo de aprendizado linear.\n",
         "\n",
-        "**Exercício 2**. Altere no exercício anterior as entradas $X$ para dados com duas ou mais dimensões. $y$ agora será uma função com múltiplas entradas. \n",
+        "**Exercício 2**. Altere no exercício anterior as entradas $X$ para dados com duas ou mais dimensões. $y$ agora será uma função com múltiplas entradas.\n",
         "\n"
       ]
     },
